k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doodly-backend
spec:
  replicas: 1 # pods
  selector:
    matchLabels:
      app: doodly-backend
  template:
    metadata:
      labels:
        app: doodly-backend
    spec:
      containers:
        - name: doodly-backend
          image: us-west1-docker.pkg.dev/cs144-25s-team16/doodly-gae-repo/doodly:v1
          imagePullPolicy: Always # always pull the latest image
          ports:
            - containerPort: 3001 # port that container listens on
